keycloak-event-service/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak-events
  labels:
    name: keycloak-events
