keycloak-event-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-event-service
  namespace: keycloak-events
spec:
  selector:
    app: keycloak-event-service
  ports:
  - name: http
    port: 8080
    targetPort: http
  - name: grpc
    port: 9000
    targetPort: grpc
  type: ClusterIP
